--- a/scripts/install
+++ b/scripts/install
@@ -90,6 +90,14 @@ ynh_app_setting_set $app final_path $final_path
 ynh_setup_source "$final_path"
 
 #=================================================
+# INSTALL SPHINX
+#=================================================
+
+pushd $final_path
+pip install .
+popd
+
+#=================================================
 # NGINX CONFIGURATION
 #=================================================
 
