--- a/scripts/install
+++ b/scripts/install
@@ -28,6 +28,9 @@ ynh_abort_if_errors
 domain=$YNH_APP_ARG_DOMAIN
 path_url=$YNH_APP_ARG_PATH
 is_public=$YNH_APP_ARG_IS_PUBLIC
+ad_name=$YNH_APP_ARG_AD_NAME
+ad_author=$YNH_APP_ARG_AD_AUTHOR
+ad_lang=$YNH_APP_ARG_AD_LANG
 
 ### If it's a multi-instance app, meaning it can be installed several times independently
 ### The id of the app as stated in the manifest is available as $YNH_APP_ID
@@ -96,6 +99,15 @@ ynh_app_setting_set $app final_path $final_path
 ynh_setup_source "$final_path"
 
 #=================================================
+# MODIFY A CONFIG FILE
+#=================================================
+
+ynh_replace_string "__NAME__" "$ad_name" "../conf/conf.py"
+ynh_replace_string "__AUTHOR__" "$ad_author" "../conf/conf.py"
+ynh_replace_string "__LANG__" "$ad_lang" "../conf/conf.py"
+cp -a ../conf/conf.py $final_path/sphinx/conf.py
+
+#=================================================
 # INSTALL SPHINX
 #=================================================
 
@@ -117,13 +129,6 @@ ynh_add_nginx_config
 
 # Create a system user
 ynh_system_user_create $app
-
-#=================================================
-# MODIFY A CONFIG FILE
-#=================================================
-#cp -a ../conf/onlyoffice-documentserver.conf /etc/onlyoffice/documentserver/nginx/onlyoffice-documentserver.conf
-#ynh_replace_string "__NEXTCLOUDDOMAIN__" "$nextcloud_domain" "/etc/loolwsd/loolwsd.xml"
-#ynh_replace_string "__PASSWORD__" "$password" "/etc/loolwsd/loolwsd.xml"
 
 #=================================================
 # STORE THE CONFIG FILE CHECKSUM
